[package]
name = "actix-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-http = "3.2.2"
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
bytes = "1.2.1"
num_cpus = "1.13.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
